35) Update usb support for Ralink chips.<br>
36) More clean autodetect procedure of 2 stage.<br>
37) Add autodetect for NAND flash type. Now single image may be work at all flash types.<br>

<br>
<b>1.6.x</b><br>
1) PPE now work. Initial HW_NAT and PPPOE Offload mode support.<br>
2) For natFastpath nvram_variable add some modes (0-disable,1-SoftwareFastnatOnly,2-HardwareFastNatOnly,3-ComplexFastnat).<br>
3) Add select leases adress for static leases from list.<br>
4) Fix freez at reload wifi modules. Need remove hw_nat first.<br>
5) Revert workaround for some not correct configured in uboot devices as DIR-300NRU.<br>
6) Fix ipmacfilter in HardwareFastNatOnly and ComplexFastnat mode.<br>
7) Use states for servicelimit incoming connections and some macros in iptables script for readable.<br>
8) Default INPUT policy now set to DROP.<br>
9) Simple QoS suport. TOS based QoS for auto prio some ports and minimize delay for interactive applications. (simple_qos variable, need add in WebUI).<br>
10) Auto disable SoftwareFastpath and increase binding threshold for HW_NAT if QoS Enabled.<br> (need add in WebUI).<br>
11) Add hw_nat_bind variable to set binding threshold per second for HW_NAT (1~500 more value = more normal path and load cpu. Default 30. Need add in WebUI).<br>
12) Rework logic for portforward. Auto enable forward direct if ipportfilter disabled.<br>
13) Some fix for dns server select in some situation.<br>
14) icmp service limit fix.<br>
15) pppoe: drop PPPOX_ZOMBIEs in pppoe_flush_dev.<br>
16) ip: ip_options_compile() resilient to NULL skb route.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>